# FanqiePlugin

./: CMakeLists.txt  FanqiePlugin.cpp  FanqiePlugin.h  IPlugin.h  README.md  config.h  config.h.in
.github/workflows/: build.yml
utils/: db.h  utils.h
